syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.navigation";
option java_outer_classname = "Navigation";
option objc_class_prefix = "HLW";

package navigation;

service Navigation {
    SendNavigationMessage(NavigationRequest) returns (NavigationResponse) {}
} 

message Vec3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message QuaternionÂ {
    float x = 1; 
    float y = 2; 
    float z = 3; 
    float w = 4; 
}

message NavigationRequest {
    Vec3 position = 1; 
    Quaternion orientation = 2; 
    Vec3 linearVelocity = 3;
    Vec3 angularVelocity = 4;
}

message NavigationResponse {
    bool success = 1;
}



